Fix spacing in expandable headers.

--- a/cfgov/unprocessed/apps/paying-for-college/css/college-costs/financial-item.less
+++ b/cfgov/unprocessed/apps/paying-for-college/css/college-costs/financial-item.less
@@ -40,8 +40,16 @@
 	&__expandable {
 		margin-top: 0;
 
+		.h4 {
+			margin-bottom: 0;
+		}
+
 		.o-expandable_label {
 			width: auto;
+		}
+
+		.financial-item_note {
+			margin-top: unit( 15px / @base-font-size-px, em );
 		}
 		
 		.financial-item_value {
